Country in /getArticle now is case insensitive
